--- a/src/ToggleSwitch.css
+++ b/src/ToggleSwitch.css
@@ -1,20 +1,19 @@
 .toggle-sw-box {
     position: relative;
     width: 100%; height: 100%;
-    padding-top: 20px; padding-bottom: 20px;
-    padding-left: 15%;
+    margin: 20px 10px;
 }
 
 .label {
     display: inline;
     text-align: center;
-    width: 60%;
-    margin-right: 20px;
+    color: #eee;
+    padding: 10px;
 }
 
 .switch {
-    position: relative;
-    top: -5px;
+    position: absolute;
+    right: 20px;
     display: inline-block;
     width: 60px;
     height: 34px;
@@ -53,11 +52,11 @@
 }
 
 input:checked + .slider {
-    background-color: #2196F3;
+    background-color: #6BCB77;
 }
 
 input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px #6BCB77;
 }
 
 input:checked + .slider:before {
