--- a/src/nav.css
+++ b/src/nav.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Nanum Gothic', sans-serif;
+    font-family: 'Nanum Gothic', sans-serif !important;
 }
 
 .nav-bar {
@@ -46,20 +46,20 @@
 }
 
 .url-form form .url_form_label {
-    font-weight: bold;
+    font-weight: bold !important;
     padding: 10px;
-    font-size: 1.2em;
+    font-size: 1.2em !important;
 }
 .url-form form input[type="url"]{
     padding: 5px;
-    font-size: 1.2em;
+    font-size: 1.2em !important;
     width: 550px;
     margin-right: 30px;
 }
 
 .url-form form input[type="submit"]{
     width: 120px;
-    font-weight: bold;
+    font-weight: bold !important;
     color: #fff;
     border: none;
     background-color:royalblue;
@@ -69,12 +69,12 @@
 }
 
 .url-form form .cookie_label {
-    font-weight: bold;
+    font-weight: bold !important;
     transform: translateY(10px);;
 }
 
 .url-form form input[type="checkbox"]{
-    transform: scale(1.5);
+    transform: scale(1.5) !important;
     cursor:pointer;
     margin-right: 30px;
 }
@@ -85,6 +85,6 @@
 
 .font-size-controller label {
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 1.2em !important;
     margin-right: 30px;
 }
