--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 }
 
 .App {
-    width: 1000px; height: 100vh;
+    width: 100%; height: 100vh;
     margin: 0 auto;
 }
 
@@ -26,6 +26,7 @@ body {
 
 .App .header {
     width: 100%; height: 70px;
+    padding-left: 50px
 }
 
 .App .header .logo {
@@ -49,8 +50,8 @@ body {
 .App .header .service_form {
     width: 500px;
     text-align: center;
-    position: relative;
-    top: 12.5px; left: 250px;
+    position: absolute;
+    right: 10px; top: 10px;
     float: left;
 }
 
@@ -79,9 +80,13 @@ body {
 }
 
 .App aside {
+    display: block;
+    border-radius: 5px;
+    background-color: #270082;
     position: absolute;
     width: 265px;
-    top: 70px; left: 0;
+    bottom: 15px; right: 15px;
+    z-index: 10;
 }
 
 .App aside .service_name {
