--- a/src/RangeBar.css
+++ b/src/RangeBar.css
@@ -1,60 +1,54 @@
 
 .range-slider-box {
-    padding: 20px;
-    padding-left: 30px;
-    display : flex;
+    margin: 20px 10px;
 }
 
-.range-slider-box .label {
-    width: 20%;
+.progress-bar-container {
+    margin: 10px 10px;
 }
 
 .progress-bar-container button {
     display: inline-block;
     background-color: #ccc;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
     cursor: pointer;
     width: 30px;
     height: 30px;
-    transform: translateY(-10px);
 }
 
 .progress-bar-container button .token {
     font-size: 2em;
-    width: 100%; height: 100%;
+    width: 80%; height: 80%;
 }
 
 .progress-bar-container .progress-bar {
     position: relative;
     display: inline-block;
-    width: 150px;
-    height: 30px;
+    width: 140px;
+    height: 20px;
     background-color: white;
-    margin: 0 10px;
     border-radius: 12px;
-    transform: translateY(-5px);
+    transform: translateY(0);
+    margin: 0 10px;
 }
 
 .progress-bar-container .progress-bar .gage {
     display: block;
     content:"";
-    position:relative;
     border-radius: 12px;
-    top:0; left:0;
     width: 50%;
     height: 100%;
-    background-color: black;
+    background-color: #6BCB77;
 }
 
 .progress-bar-container .progress-bar .g_percent{
+    color: #eee;
     position: absolute;
-    top: 50%; left: 150%;
-    transform: translate(-50%, -50%);
-    color: #000;
+    right: -40px; bottom: 35px;
     font-weight: bold;
     text-align: center;
-    font-size: 1em;
+    font-size: 1.2em;
 }
 
 
