--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,8 @@
 
 body {
     margin: 0 !important;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
@@ -26,6 +26,8 @@ body {
 
 .App-madebymermaid .header {
     width: 100%; height: 70px;
+    position: fixed; top: 0; left: 0;
+    z-index: 99999;
     padding-left: 50px
 }
 
@@ -57,14 +59,14 @@ body {
 
 .App-madebymermaid .header .service_form input[type="url"]{
     padding: 5px;
-    font-size: 2em;
-    margin-right: 10px;
+    font-size: 25px;
+    margin-right: 5px;
     border-radius: 5px;
 }
 
 .App-madebymermaid .header .service_form input[type="submit"]{
     padding: 5px 15px;
-    font-size: 2em;
+    font-size: 25px;
     border-radius: 5px;
     background-color: #6BCB77; color: #eee;
     border: none;
@@ -86,7 +88,7 @@ body {
     position: absolute;
     width: 265px;
     bottom: 15px; right: 15px;
-    z-index: 10;
+    z-index: 30 !important;
 }
 
 .App-madebymermaid aside .service_name {
@@ -103,9 +105,11 @@ body {
     padding-bottom: 30px;
 }
 
+
 .rendered-page {
+    position: relative; top: 70px;
     background-color: #fff;
-    width: 100%; height: 675px;
+    width: 100vw; height: 90vh;
     margin: 5px auto;
     overflow-y: scroll;
     overflow-x: hidden;
