--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,22 @@
-* {
-    margin: 0; padding: 0;
-    box-sizing: border-box;
-}
 
 body {
     margin: 0 !important;
     width: 100%;
     height: 100%;
-    overflow: hidden;
 }
 
 .App-madebymermaid {
     width: 100%; height: 100vh;
     margin: 0 auto;
-}
-
-.App-madebymermaid .header::before {
-    display: block;
-    content: '';
-    width: 100vw; height: 70px;
-    background-color: #eee;
-    position: absolute; top: 0; left: 0;
-    z-index: -1;
+    overflow: hidden;
 }
 
 .App-madebymermaid .header {
     width: 100%; height: 70px;
     position: fixed; top: 0; left: 0;
     z-index: 99999;
-    padding-left: 50px
+    padding-left: 50px;
+    background-color: #fff !important;
 }
 
 .App-madebymermaid .header .logo {
@@ -42,6 +30,7 @@ body {
     font-size: 2em !important;
     float: left;
     margin-right: 10px;
+    font-family: 'Edu TAS Beginner', cursive;
 }
 
 .App-madebymermaid .header .logo .logo_img{
@@ -50,71 +39,73 @@ body {
 }
 
 .App-madebymermaid .header .service_form {
-    width: 500px;
     text-align: center;
-    position: absolute;
-    right: 10px; top: 10px;
+    position: relative;
+    top: 15px; left: 30px;
     float: left;
 }
 
-.App-madebymermaid .header .service_form input[type="url"]{
-    padding: 5px;
-    font-size: 25px;
-    margin-right: 5px;
-    border-radius: 5px;
+.App-madebymermaid .header .form_add_style input[type="url"] {
+    width: 40vw;
+    font-size: 1.2em;
 }
 
-.App-madebymermaid .header .service_form input[type="submit"]{
-    padding: 5px 15px;
-    font-size: 25px;
-    border-radius: 5px;
-    background-color: #6BCB77; color: #eee;
-    border: none;
-}
-
-.App-madebymermaid .contents::before {
-    display: block;
-    content: '';
-    width: 100vw; height: 100vh;
-    position: absolute; top: 0; left: 0;
-    z-index: -2;
-    background-color: #270082 !important;
+.App-madebymermaid .header .form_add_style input[type="submit"] {
+    font-size: 1.5em;
+    position: relative;
+    right: 90px;
+    color: #222;
+    background: none;
 }
 
 .App-madebymermaid #tool-box {
-    display: block;
-    border-radius: 5px;
-    background-color: #270082;
+    width: 40vw;
     position: absolute;
-    width: 265px;
-    bottom: 15px; right: 15px;
+    top: 0; right: 0;
     z-index: 30 !important;
 }
 
-.App-madebymermaid #tool-box .service_name {
-    color: #fff;
-    padding: 30px 0;
-    text-align: center;
+.App-madebymermaid #tool-box .tool-bar {
+    position: relative;
 }
 
-.App-madebymermaid #tool-box .service_destination {
-    font-weight: bold;
-    color: #fff;
-    padding-left: 10px;
+.App-madebymermaid #tool-box .tool-bar .burger {
+    position: absolute;
+    top:0; right: 15px;
+    width: 75px;
     text-align: center;
-    padding-bottom: 30px;
+    cursor: pointer;
 }
 
+.App-madebymermaid #tool-box .tool-bar .burger:hover + div.burger-list{
+    display: flex;
+}
+
+.App-madebymermaid #tool-box .tool-bar .burger img{
+    margin: 15px;
+    width: 40px; height: 40px;
+}
+
+.App-madebymermaid #tool-box .tool-bar .burger-list {
+    display: none;
+    flex-wrap: wrap;
+    position: relative;
+    top: 75px;
+    background-color: #fff;
+    border-bottom-left-radius: 20px;
+}
+
+.App-madebymermaid #tool-box .tool-bar .burger-list:hover {
+    display: flex;
+}
 
 .rendered-page {
     position: relative; top: 70px;
-    background-color: #fff;
     width: 100vw; height: 90vh;
     margin: 5px auto;
     overflow-y: scroll;
     overflow-x: hidden;
     z-index: 2;
-    border: 2px solid yellow;
 }
 
 .rendered-page::-webkit-scrollbar {
