--- a/src/ToggleSwitch.css
+++ b/src/ToggleSwitch.css
@@ -1,13 +1,13 @@
 .toggle-sw-box {
     position: relative;
-    width: 100%; height: 100%;
-    margin: 20px 10px;
+    width: 250px; height: 100%;
+    margin: 20px 0;
 }
 
 .label {
     display: inline;
     text-align: center;
-    color: #eee;
+    color: #333;
     padding: 10px;
 }
 
