--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ body {
 }
 
 .App-madebymermaid #tool-box {
-    width: 40vw;
+    width: 500px;
     position: absolute;
     top: 0; right: 0;
     z-index: 30 !important;
@@ -79,7 +79,7 @@ body {
 }
 
 .App-madebymermaid #tool-box .tool-bar .burger:hover + div.burger-list{
-    display: flex;
+    transform: translateX(-500px);
 }
 
 .App-madebymermaid #tool-box .tool-bar .burger img{
@@ -88,16 +88,20 @@ body {
 }
 
 .App-madebymermaid #tool-box .tool-bar .burger-list {
-    display: none;
+    display: flex;
     flex-wrap: wrap;
     position: relative;
-    top: 75px;
+    top: 75px; left: 500px;
+    padding: 30px;
     background-color: #fff;
     border-bottom-left-radius: 20px;
+    border-top-left-radius: 20px;
+    box-shadow: 0 0 5px #444;
+    transition: all 0.8s;
 }
 
 .App-madebymermaid #tool-box .tool-bar .burger-list:hover {
-    display: flex;
+    transform: translateX(-500px);
 }
 
 .rendered-page {
@@ -119,3 +123,62 @@ body {
     background-color: grey;
 }
 
+/* The switch - the box around the slider */
+.toggle-focus-effect {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    top: -7px;
+}
+
+  /* Hide default HTML checkbox */
+.toggle-focus-effect input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+  /* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #333;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+  /* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
