--- a/src/App.css
+++ b/src/App.css
@@ -78,16 +78,12 @@ body {
     cursor: pointer;
 }
 
-.App-madebymermaid #tool-box .tool-bar .burger:hover + div.burger-list{
-    transform: translateX(-500px);
-}
-
 .App-madebymermaid #tool-box .tool-bar .burger img{
     margin: 15px;
     width: 40px; height: 40px;
 }
 
-.App-madebymermaid #tool-box .tool-bar .burger-list {
+.App-madebymermaid #tool-box .tool-bar #burger-list {
     display: flex;
     flex-wrap: wrap;
     position: relative;
@@ -100,7 +96,7 @@ body {
     transition: all 0.8s;
 }
 
-.App-madebymermaid #tool-box .tool-bar .burger-list:hover {
+.transform {
     transform: translateX(-500px);
 }
 
@@ -124,12 +120,18 @@ body {
 }
 
 /* The switch - the box around the slider */
+
 .toggle-focus-effect {
-    position: relative;
-    display: inline-block;
+    position: absolute;
     width: 60px;
     height: 34px;
-    top: -7px;
+    top: 40px;
+    right: 40px;
+}
+
+.toggle-focus-effect label[for="focus"] {
+    position: relative;
+    right: 50px;
 }
 
   /* Hide default HTML checkbox */
