화면에 스타일이 문자열로 출력되는 버그 수정

--- a/src/App.css
+++ b/src/App.css
@@ -110,13 +110,7 @@ body {
 }
 
 .rendered-page::-webkit-scrollbar {
-    width: 10px;
-}
-.rendered-page::-webkit-scrollbar-thumb {
-    background-color: #2f3542;
-}
-.rendered-page::-webkit-scrollbar-track {
-    background-color: grey;
+    display: none;
 }
 
 /* The switch - the box around the slider */
