--- a/src/Home.css
+++ b/src/Home.css
@@ -37,7 +37,6 @@
 .main_page .header .logo .title{
   float: left;
   margin-right: 10px;
-  font-family: 'Edu TAS Beginner', cursive;
 }
 
 .main_page .header .logo .logo_img{
@@ -64,7 +63,6 @@
   color: #555;
   text-decoration: none;
   text-align: center;
-  font-family: 'Edu TAS Beginner', cursive;
   font-size: 1.3em;
 }
 
@@ -87,7 +85,7 @@
 
 .main_page .contents .introduce h2 {
   font-size: 2.5em;
-  font-family: 'Edu TAS Beginner', cursive;
+  text-align: center;
   background-color: rgba(255, 255, 255, 0.5);
   padding: 10px;
   border-top-left-radius: 15px;
@@ -111,16 +109,14 @@
   padding: 50px;
 }
 .service_form input[type="url"]{
-  font-family: 'Edu TAS Beginner', cursive;
-  padding: 5px;
-  font-size: 2em;
+  padding: 15px;
+  font-size: 1.5em;
   margin-right: 10px;
   border-radius: 15px;
 }
 
 .service_form input[type="submit"]{
-  font-family: 'Edu TAS Beginner', cursive;
-  padding: 5px 15px;
+  padding: 8px 17px;
   font-size: 2em;
   border-radius: 15px;
   background-color: #333; color: #eee;
